# webserv

./: .gitignore  Makefile  README.md  webserv  webserv.cpp
.github/workflows/: cpplint.yml
configs/: serv.conf  webserv.conf
default_pages/: 405.html  default.html
html/: index.html
include/: choose_serv.hpp  config_parser.hpp  location.hpp  request.hpp  server.hpp  utils_string.hpp
nginx/: Dockerfile  run.sh  start.sh
src/: serv.conf  webserv.cpp
src/autoindex/: autoindex.cpp  autoindex.html
src/autoindex/root/: dqw.cpp  dqw.hpp
src/cgi/include/: cgi.hpp  datachannel.hpp
src/cgi/src/: cgi.cpp  datachannel.cpp
src/config_parser/: config_parser.cpp
src/error_pages/: error.html  error_pages.cpp
src/lexer/: .gitignore  CMakeLists.txt  Makefile
src/lexer/include/: lexer.hpp  token.hpp
src/lexer/src/: lexer.cpp  token.cpp
src/lexer/tests/: CMakeLists.txt  base_config.webserv  lexer_test.cpp
src/location/: contex_location.cpp  context_location.hpp  location.cpp  location.hpp
src/parser/: main.cpp  server.cpp  server.hpp  webserv.conf
src/request/: choose_serv.hpp  request.cpp  request.hpp
src/request_parser/: .gitignore  CMakeLists.txt
src/request_parser/include/: request.hpp  request_parser.hpp
src/request_parser/src/: request.cpp  request_parser.cpp
src/request_parser/tests/: CMakeLists.txt  base_chunked.txt  base_get.txt  base_head_post.txt  request_parser_test.cpp
src/response/include/: response.hpp
src/response/src/: response.cpp
src/response/tests/: CMakeLists.txt  main.cpp
src/server/: context_server.cpp  context_server.hpp  main.cpp  server.cpp  server.hpp
src/utils/: string.cpp
src/webserver_client/: CMakeLists.txt
src/webserver_client/include/: client.hpp  timer.hpp
src/webserver_client/src/: client.cpp  timer.cpp
webserver_lexer/: CMakeLists.txt
webserver_lexer/googletest/googletest/include/gtest/: gtest-death-test.h
webserver_lexer/googletest/googletest/include/gtest/internal/: gtest-filepath.h
webserver_lexer/googletest/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest.cc
webserver_lexer/lib_include/: token.hpp
webserver_lexer/lib_src/: lexer.cpp  token.cpp
webserver_lexer/tests/: main.cpp
